--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="benefits">
             <h2>Pourquoi essayer le Bridge ?</h2>
             <ul>
-                <li>Découvrez un jeu stratégique et passionnant</li>
-                <li>Faites de nouvelles rencontres</li>
-                <li>Challengez votre cerveau !</li>
-                <li>Améliorez vos compétences cognitives</li>
-                <li>Et, surtout, amusez-vous !</li>
+                <li>Pour découvrir un jeu stratégique et passionnant</li>
+                <li>Pour faire de nouvelles rencontres</li>
+                <li>Pour challenger votre cerveau !</li>
+                <li>Pour améliorer vos compétences cognitives</li>
+                <li>Et, surtout, pour vous amuser !</li>
             </ul>
         </div>
 
@@ -35,7 +35,7 @@ Gratuite</a>
     </div>
 
     <footer>
-        <p>© 2023 Bridge facile !. Tous droits réservés.</p>
+        <p>© 2025 Bridge facile !. Tous droits réservés.</p>
         <p><a href="#">Politique de confidentialité</a> | <a 
 href="#">Conditions d'utilisation</a></p>
         <p>Contactez-nous : contact@bridgefacile.fr</p>
