--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 maintenant je suis passionné par ce jeu stratégique !" – Jean Dupont</p>
         </div>
 
-        <a href="#inscription" class="cta-button">Obtenir Votre Licence 
+        <a href="#inscription" class="cta-button">Obtenez Votre Licence 
 Gratuite</a>
     </div>
 
